tests/baselines/reference/typeGuardNarrowsIndexedAccessOfKnownProperty9.errors.txt
typeGuardNarrowsIndexedAccessOfKnownProperty9.ts(5,13): error TS6133: 'c' is declared but its value is never read.
typeGuardNarrowsIndexedAccessOfKnownProperty9.ts(6,13): error TS6133: 'd' is declared but its value is never read.


==== typeGuardNarrowsIndexedAccessOfKnownProperty9.ts (2 errors) ====
    class C1 {
        private a = "a"; // ok
        private b = "b"; // ok
    
        private c = "c"; // error unused prop
                ~
!!! error TS6133: 'c' is declared but its value is never read.
        private d = "d"; // error unused prop
                ~
!!! error TS6133: 'd' is declared but its value is never read.
    
        getValue(key: "a" | "b") {
            return this[key];
        }
    }
    